objects/Web_Call_Setting_key__c.object
<CustomObject>
    <fields>
        <fullName>Key_Location__c</fullName>
        <label>Key Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Header</fullName>
                </value>
                <value>
                    <fullName>Url</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
                <value>
                    <fullName>OAUTH</fullName>
                </value>
                <value>
                    <fullName>Method</fullName>
                </value>
                <value>
                    <fullName>Timeout</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Setting_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Setting Link</label>
        <referenceTo>Web_Call_Setting__c</referenceTo>
        <relationshipLabel>Setting Links</relationshipLabel>
        <relationshipName>Web_Call_Setting_keys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TempId__c</fullName>
        <externalId>true</externalId>
        <label>TempId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Web_Call_Setting__c</fullName>
        <label>Web Call Setting</label>
        <referenceTo>Web_Call_Setting__c</referenceTo>
        <relationshipLabel>Web Call Setting keys</relationshipLabel>
        <relationshipName>Web_Call_Setting_keys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>